<resources>
    <string name="app_name">InstaFire</string>
    <string name="button">Button</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="_31_minutes_ago">31 minutes ago</string>
    <string name="todo">TODO</string>
    <string name="description">description</string>
    <string name="choose_image">Choose Image</string>
</resources>