<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="master" />

    <TextView
        android:id="@+id/tvRelativeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_31_minutes_ago" />

    <ImageView
        android:id="@+id/ivPost"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description" />

</LinearLayout>